--- a/index.html
+++ b/index.html
@@ -9,16 +9,34 @@
 </head>
 
 <body>
-    <header>
-
+    <header class="header">
+        <div class="container">
+            <div class="header-box">
+                <div class="header-logo logo">
+                    <img src="/images/logo.png" alt="logo">
+                </div>
+                <div class="header-controls">controls</div>
+            </div>
+        </div>
     </header>
 
-    <main>
+    <main class="main">
+        <div class="container">
+            container
+        </div>
 
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-box">
+                <div class="footer-logo logo">
+                    <img src="/images/logo.png" alt="logo">
+                </div>
+                <div class="footer-nav">nav</div>
+                <div class="footer-social">social</div>
+            </div>
+        </div>
     </footer>
 </body>
 
