add button, add images

--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
                 <div class="header-logo logo">
                     <img src="/images/logo.png" alt="logo">
                 </div>
-                <div class="header-controls">controls</div>
+                <div class="header-controls">
+                    <button type="button" class="btn btn-primary"><img src="/images/button/user.png" alt="user">Войти
+                    </button>
+                    <button type="button" class="btn btn-outline"><img src="/images/button/basket.png"
+                            alt="basket">Корзина
+                    </button>
+                </div>
             </div>
         </div>
     </header>
 
     <main class="main">
         <div class="container">
-            container
+            Рестораны
         </div>
 
     </main>
@@ -33,8 +39,15 @@
                 <div class="footer-logo logo">
                     <img src="/images/logo.png" alt="logo">
                 </div>
-                <div class="footer-nav">nav</div>
-                <div class="footer-social">social</div>
+                <div class="footer-nav">
+                    <a href="#">Ресторанам</a>
+                    <a href="#">Курьерам</a>
+                    <a href="#">Пресс-центр</a>
+                    <a href="#">Контакты</a>
+                </div>
+                <div class="footer-social">
+                    <a href="#"><img src="/images/social/social.png" alt="social"></a>
+                </div>
             </div>
         </div>
     </footer>
