--- a/index.html
+++ b/index.html
@@ -52,14 +52,69 @@
                     </div>
 
                     <div class="products-wrapper">
+
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="" alt="restaurant">
+                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description-title">Пицца плюс</h4>
+                                    <div class="products-card__description-bage">50 мин</div>
+
+                                </div>
+
+                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
+                            </div>
+                        </div>
+
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="/images/rest/rest2.jpg" alt="restaurant2">
                             </div>
                             <div class="products-card__description">
                                 <h4 class="products-card-title">Ресторан "Новый Бизнес"</h4>
                                 <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
+                            </div>
+                        </div>
 
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="/images/rest/rest3.jpg" alt="restaurant3">
+                            </div>
+                            <div class="products-card__description">
+                                <h4 class="products-card-title">Ресторан "Новый Бизнес"</h4>
+                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
+                            </div>
+                        </div>
+
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="/images/rest/rest4.jpg" alt="restaurant4">
+                            </div>
+                            <div class="products-card__description">
+                                <h4 class="products-card-title">Ресторан "Новый Бизнес"</h4>
+                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
+                            </div>
+                        </div>
+
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="/images/rest/rest5.jpg" alt="restaurant5">
+                            </div>
+                            <div class="products-card__description">
+                                <h4 class="products-card-title">Ресторан "Новый Бизнес"</h4>
+                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
+                            </div>
+                        </div>
+
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="/images/rest/rest6.jpg" alt="restaurant6">
+                            </div>
+                            <div class="products-card__description">
+                                <h4 class="products-card-title">Ресторан "Новый Бизнес"</h4>
+                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
                             </div>
                         </div>
                     </div>
