--- a/index.html
+++ b/index.html
@@ -60,63 +60,129 @@
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
                                     <h4 class="products-card__description-title">Пицца плюс</h4>
-                                    <div class="products-card__description-bage">50 мин</div>
-
+                                    <div class="products-card__description-badge">50 мин</div>
                                 </div>
-
-                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
+                                <div class="products-card__description-info">
+                                    <h4 class="products-card__description-rating">
+                                        <img src="/images/star.svg" alt="rating"
+                                            class="products-card__description-rating-star">
+                                        4.5
+                                    </h4>
+                                    <h4 class="products-card__description-price">От 900 ₽</h4>
+                                    <div class="products-card__description-category">Пицца </div>
+                                </div>
                             </div>
                         </div>
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest2.jpg" alt="restaurant2">
+                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
                             </div>
                             <div class="products-card__description">
-                                <h4 class="products-card-title">Ресторан "Новый Бизнес"</h4>
-                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description-title">Тануки</h4>
+                                    <div class="products-card__description-badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <h4 class="products-card__description-rating">
+                                        <img src="/images/star.svg" alt="rating"
+                                            class="products-card__description-rating-star">
+                                        4.5
+                                    </h4>
+                                    <h4 class="products-card__description-price">От 900 ₽</h4>
+                                    <div class="products-card__description-category">Пицца </div>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="products-card">
-                            <div class="products-card__image">
-                                <img src="/images/rest/rest3.jpg" alt="restaurant3">
-                            </div>
-                            <div class="products-card__description">
-                                <h4 class="products-card-title">Ресторан "Новый Бизнес"</h4>
-                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
-                            </div>
-                        </div>
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest4.jpg" alt="restaurant4">
+                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
                             </div>
                             <div class="products-card__description">
-                                <h4 class="products-card-title">Ресторан "Новый Бизнес"</h4>
-                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description-title">FoodBand</h4>
+                                    <div class="products-card__description-badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <h4 class="products-card__description-rating">
+                                        <img src="/images/star.svg" alt="rating"
+                                            class="products-card__description-rating-star">
+                                        4.5
+                                    </h4>
+                                    <h4 class="products-card__description-price">От 900 ₽</h4>
+                                    <div class="products-card__description-category">Пицца </div>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="products-card">
-                            <div class="products-card__image">
-                                <img src="/images/rest/rest5.jpg" alt="restaurant5">
-                            </div>
-                            <div class="products-card__description">
-                                <h4 class="products-card-title">Ресторан "Новый Бизнес"</h4>
-                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
-                            </div>
-                        </div>
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest6.jpg" alt="restaurant6">
+                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
                             </div>
                             <div class="products-card__description">
-                                <h4 class="products-card-title">Ресторан "Новый Бизнес"</h4>
-                                <p class="products-card-address">г. Москва, ул. Пушкинская, д. 12</p>
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description-title">Жадина-пицца</h4>
+                                    <div class="products-card__description-badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <h4 class="products-card__description-rating">
+                                        <img src="/images/star.svg" alt="rating"
+                                            class="products-card__description-rating-star">
+                                        4.5
+                                    </h4>
+                                    <h4 class="products-card__description-price">От 900 ₽</h4>
+                                    <div class="products-card__description-category">Пицца </div>
+                                </div>
                             </div>
                         </div>
+
+
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description-title">Точка еды</h4>
+                                    <div class="products-card__description-badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <h4 class="products-card__description-rating">
+                                        <img src="/images/star.svg" alt="rating"
+                                            class="products-card__description-rating-star">
+                                        4.5
+                                    </h4>
+                                    <h4 class="products-card__description-price">От 900 ₽</h4>
+                                    <div class="products-card__description-category">Пицца </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description-title">PizzaBurger</h4>
+                                    <div class="products-card__description-badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <h4 class="products-card__description-rating">
+                                        <img src="/images/star.svg" alt="rating"
+                                            class="products-card__description-rating-star">
+                                        4.5
+                                    </h4>
+                                    <h4 class="products-card__description-price">От 900 ₽</h4>
+                                    <div class="products-card__description-category">Пицца </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
             </section>
         </main>
