--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Delivery Food</title>
 </head>
 
@@ -76,7 +76,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
+                                <img src="/images/rest/rest2.jpg" alt="restaurant2">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -98,7 +98,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
+                                <img src="/images/rest/rest3.jpg" alt="restaurant3">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -120,7 +120,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
+                                <img src="/images/rest/rest4.jpg" alt="restaurant4">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -142,7 +142,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
+                                <img src="/images/rest/rest5.jpg" alt="restaurant5">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -164,7 +164,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
+                                <img src="/images/rest/rest6.jpg" alt="restaurant6">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
