--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <div class="container">
                 <div class="header-box">
                     <div class="header-logo logo">
-                        <img src="/images/logo.png" alt="logo">
+                        <img src="./images/logo.png" alt="logo">
                     </div>
                     <div class="header-controls">
-                        <button type="button" class="btn btn-primary"><img src="/images/button/user.png"
+                        <button type="button" class="btn btn-primary"><img src="./images/button/user.png"
                                 alt="user">Войти
                         </button>
-                        <button type="button" class="btn btn-outline"><img src="/images/button/basket.png"
+                        <button type="button" class="btn btn-outline"><img src="./images/button/basket.png"
                                 alt="basket">Корзина
                         </button>
                     </div>
@@ -55,7 +55,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest1.jpg" alt="restaurant1">
+                                <img src="./images/rest/rest1.jpg" alt="restaurant1">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="products-card__description-info">
                                     <h4 class="products-card__description-rating">
-                                        <img src="/images/star.svg" alt="rating"
+                                        <img src="./images/star.svg" alt="rating"
                                             class="products-card__description-rating-star">
                                         4.5
                                     </h4>
@@ -76,7 +76,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest2.jpg" alt="restaurant2">
+                                <img src="./images/rest/rest2.jpg" alt="restaurant2">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -85,7 +85,7 @@
                                 </div>
                                 <div class="products-card__description-info">
                                     <h4 class="products-card__description-rating">
-                                        <img src="/images/star.svg" alt="rating"
+                                        <img src="./images/star.svg" alt="rating"
                                             class="products-card__description-rating-star">
                                         4.5
                                     </h4>
@@ -98,7 +98,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest3.jpg" alt="restaurant3">
+                                <img src="./images/rest/rest3.jpg" alt="restaurant3">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -107,7 +107,7 @@
                                 </div>
                                 <div class="products-card__description-info">
                                     <h4 class="products-card__description-rating">
-                                        <img src="/images/star.svg" alt="rating"
+                                        <img src="./images/star.svg" alt="rating"
                                             class="products-card__description-rating-star">
                                         4.5
                                     </h4>
@@ -120,7 +120,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest4.jpg" alt="restaurant4">
+                                <img src="./images/rest/rest4.jpg" alt="restaurant4">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -129,7 +129,7 @@
                                 </div>
                                 <div class="products-card__description-info">
                                     <h4 class="products-card__description-rating">
-                                        <img src="/images/star.svg" alt="rating"
+                                        <img src="./images/star.svg" alt="rating"
                                             class="products-card__description-rating-star">
                                         4.5
                                     </h4>
@@ -142,7 +142,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest5.jpg" alt="restaurant5">
+                                <img src="./images/rest/rest5.jpg" alt="restaurant5">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="products-card__description-info">
                                     <h4 class="products-card__description-rating">
-                                        <img src="/images/star.svg" alt="rating"
+                                        <img src="./images/star.svg" alt="rating"
                                             class="products-card__description-rating-star">
                                         4.5
                                     </h4>
@@ -164,7 +164,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="/images/rest/rest6.jpg" alt="restaurant6">
+                                <img src="./images/rest/rest6.jpg" alt="restaurant6">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -173,7 +173,7 @@
                                 </div>
                                 <div class="products-card__description-info">
                                     <h4 class="products-card__description-rating">
-                                        <img src="/images/star.svg" alt="rating"
+                                        <img src="./images/star.svg" alt="rating"
                                             class="products-card__description-rating-star">
                                         4.5
                                     </h4>
@@ -191,7 +191,7 @@
             <div class="container">
                 <div class="footer-box">
                     <div class="footer-logo logo">
-                        <img src="/images/logo.png" alt="logo">
+                        <img src="./images/logo.png" alt="logo">
                     </div>
                     <div class="footer-nav">
                         <ul>
@@ -202,9 +202,9 @@
                         </ul>
                     </div>
                     <div class="footer-social">
-                        <a href="#"><img src="/images/social/insta.png" alt="instagram"></a>
-                        <a href="#"><img src="/images/social/facebook.png" alt="facebook"></a>
-                        <a href="#"><img src="/images/social/vk.png" alt="vk"></a>
+                        <a href="#"><img src="./images/social/insta.png" alt="instagram"></a>
+                        <a href="#"><img src="./images/social/facebook.png" alt="facebook"></a>
+                        <a href="#"><img src="./images/social/vk.png" alt="vk"></a>
                     </div>
                 </div>
             </div>
