add goods images

--- a/goods.html
+++ b/goods.html
@@ -34,28 +34,13 @@
         </header>
 
         <main class="main">
-            <section class="banner">
-                <div class="container">
-                    <div class="banner-item">
-                        <h2 class="banner-item-title">Онлайн-сервис<br /> доставки еды на дом</h2>
-                        <p class="banner-item-subtitle">Блюда из любимого ресторана привезет<br /> курьер в перчатках,
-                            маске и
-                            с антисептиком</p>
-                    </div>
-                </div>
-            </section>
+
             <section class="products">
                 <div class="container">
-                    <div class="products-header">
-                        <h3 class="products-header-title">Рестораны</h3>
-                        <input type="text" class="products-header-search" placeholder="Поиск блюд и ресторанов">
-                    </div>
-
                     <div class="products-wrapper">
-
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/rest/rest1.jpg" alt="restaurant1">
+                                <img src="./images/goods/goods1.jpg" alt="restaurant1">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -76,7 +61,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/rest/rest2.jpg" alt="restaurant2">
+                                <img src="./images/goods/goods2.jpg" alt="restaurant2">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -98,7 +83,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/rest/rest3.jpg" alt="restaurant3">
+                                <img src="./images/goods/goods3.jpg" alt="restaurant3">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -120,7 +105,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/rest/rest4.jpg" alt="restaurant4">
+                                <img src="./images/goods/goods4.jpg" alt="restaurant4">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -142,7 +127,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/rest/rest5.jpg" alt="restaurant5">
+                                <img src="./images/goods/goods5.jpg" alt="restaurant5">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -164,7 +149,7 @@
 
                         <div class="products-card">
                             <div class="products-card__image">
-                                <img src="./images/rest/rest6.jpg" alt="restaurant6">
+                                <img src="./images/goods/goods6.jpg" alt="restaurant6">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
