--- a/index.html
+++ b/index.html
@@ -187,6 +187,20 @@
             </section>
         </main>
 
+        <div class="cart-modal__overlay">
+            <div class="cart-modal">
+                <div class="cart-modal__header">
+
+                </div>
+                <div class="cart-modal__body">
+
+                </div>
+                <div class="cart-modal__footer">
+
+                </div>
+            </div>
+        </div>
+
         <footer class="footer">
             <div class="container">
                 <div class="footer-box">
