--- a/index.html
+++ b/index.html
@@ -190,13 +190,24 @@
         <div class="cart-modal__overlay">
             <div class="cart-modal">
                 <div class="cart-modal__header">
-
+                    <h2 class="cart-modal__header--title">Корзина</h2>
+                    <span class="cart-modal__header--close">
+                        <img src="./images/close.svg" alt="close">
+                    </span>
                 </div>
                 <div class="cart-modal__body">
 
                 </div>
                 <div class="cart-modal__footer">
-
+                    <div class="cart-modal__footer--price">
+                        1250 ₽
+                    </div>
+                    <div class="cart-modal__footer--controls">
+                        <button type="button" class="btn btn-primary">Оформить заказ
+                        </button>
+                        <button type="button" class="btn btn-outline">Отмена
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
